Adding tests for joining tournaments.